<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Panjang" />

    <EditText
        android:id="@+id/edit_width"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lebar" />

    <EditText
        android:id="@+id/edit_height"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tinggi" />

    <EditText
        android:id="@+id/edit_length"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Simpan"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/btn_calcu_volume"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="Hitung Volume"/>

        <Button
            android:id="@+id/btn_calcu_circum_preferenc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="Hitung Keliling"/>

        <Button
            android:id="@+id/btn_calcu_surface_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="Hitung Luas Area" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="Result"/>


</LinearLayout>